[tool.poetry]
name = "cowait"
version = "0.4.0"
description = ""
authors = ["Johan Henriksson <johan@backtick.se>"]
license = "Apache License v2.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
docker = "^4.4.0"
kubernetes = "^12.0.1"
PyYAML = "^5.3.1"
dask = "^2.30.0"
distributed = "^2.30.1"
marshmallow = "^3.9.1"
aiohttp = "^3.7.3"
pytest = "^6.1.2"
pytest-sugar = "^0.9.4"
pytest-cov = "^2.10.1"
nest-asyncio = "^1.4.3"
numpy = "^1.19.4"
sty = "^1.0.0-beta.12"
python-dotenv = "^0.15.0"
aiohttp-middlewares = "^1.1.0"
alt-pytest-asyncio = "^0.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
